created sample mvc.

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,8 @@
     <script src="../dist/app.js"></script>
 </head>
 <body ng-app="es6app">
-    <Main></Main>
+    <div ng-controller="MainController as ctrl">
+        <Main></Main>
+    </div>
 </body>
 </html>
